# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg
crlf-to-lf/: main.py
crlf_to_lf/: main.py
hooks/: crlf_to_lf.py  pytest_check.py
pytest_check/: main.py  pytest-check
