# setup.cfg
[metadata]
name = pre-commit-hooks
description = A collection of Frexom's pre-commit hooks.
version = 0.0.1
author = Frexom
author_email = imfrexom@gmail.com

[options]
packages = find:

[options.entry_points]
console_scripts =
    crlf-to-lf = hooks.crlf_to_lf:main
    pytest-check = hooks.pytest_check:main
